# pycentauri

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  PROTOCOL.md
examples/: snapshot.py  start_print.py  status_watch.py
src/pycentauri/: __init__.py  camera.py  cc2.py  cli.py  client.py  connect.py  discovery.py  mjpeg_broadcast.py  models.py  rtsp.py  sdcp.py  server.py  upload.py
src/pycentauri/mcp/: __main__.py  server.py
src/pycentauri/web/: app.js  index.html  styles.css
tests/: test_cc2_mapping.py  test_client.py  test_discovery.py  test_mjpeg_broadcast.py  test_rtsp.py  test_sdcp.py  test_server.py  test_upload.py
