[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycentauri"
version = "0.3.0"
description = "Python client and MCP server for Elegoo Centauri Carbon 3D printers"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Brandon" }]
keywords = ["3d-printing", "elegoo", "centauri", "centauri-carbon", "sdcp", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "sse-starlette>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pycentauri[mcp,server]",
]

[project.scripts]
centauri = "pycentauri.cli:app"

[project.urls]
Homepage = "https://github.com/bjan/pycentauri"
Repository = "https://github.com/bjan/pycentauri"
Issues = "https://github.com/bjan/pycentauri/issues"
Changelog = "https://github.com/bjan/pycentauri/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pycentauri"]

[tool.hatch.build.targets.sdist]
include = ["src/pycentauri", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's idiomatic DI uses `Depends()` in default values; that's B008.
"src/pycentauri/server.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
